Disabled user selection of text

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,6 +23,7 @@ body {
     color: var(--textColor);
     height: 100vh;
     padding: var(--spacing);
+    user-select: none;
 }
 
 input, textarea, button {
