--- a/css/style.css
+++ b/css/style.css
@@ -5,20 +5,38 @@
 
     /* Numbers */
 }
+
 /* Main */
 body {
     padding-top: 70px;
 }
 
+/* Scrollbar */
+body::-webkit-scrollbar {
+    width: 1em;
+}
+
+body::-webkit-scrollbar-track {
+    background-color: #607d8b;
+    -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 1);
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: white;
+    -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);
+    /* border-radius: 1em; */
+}
+
+/* Navbar */
 .navBar {
     position: fixed;
     top: 0;
     width: 100%;
     z-index: 99;
-    text-align: center;
 }
 
 /* Materialize */
+/* Toast */
 #toast-container {
     top: 50px;
     right: auto !important;
