--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 :root {
     /* Colors */
     --textColor: rgb(255, 255, 255);
+    --panelColor: transparent;
 
     /* Numbers */
 }
@@ -11,13 +12,38 @@ body {
     padding-top: 70px;
 }
 
+/* Cards */
+/* Card Area */
+#cardArea {
+    background-color: red;
+    /* color: cyan; */
+}
+
+/* Card Input */
+.cardInput {
+    width: 100%;
+}
+
+/* Card Button Area */
+.cardButtonArea {
+    /* background-color: #47acff; */
+    /* height: 100% !important; */
+    width: auto;
+    margin-left: 10px;
+}
+
+/* Card Buttons */
+.cardButton {
+    height: 100% !important;
+}
+
 /* Scrollbar */
 body::-webkit-scrollbar {
     width: 1em;
 }
 
 body::-webkit-scrollbar-track {
-    background-color: #607d8b;
+    background-color: var(--panelColor);
     -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 1);
 }
 
@@ -51,7 +77,7 @@ body {
 
 .container {
     width: 300px;
-    background-color: #607d8b;
+    background-color: var(--panelColor);
 
     /* display: block; */
     margin: 20% auto 10% auto;
@@ -77,7 +103,7 @@ body {
     width: 300px;
     height: 280px;
     border-radius: 10px 10px 0 0;
-    background-color: #607d8b;
+    background-color: var(--panelColor);
 }
 
 .weather-icon {
