--- a/css/style.css
+++ b/css/style.css
@@ -26,16 +26,18 @@ body {
 /* TESTING - page 2 */
 #page2 {
     position: absolute;
-    width: 100%;
+    width: 70%;
     visibility: hidden;
 
+    /* TESTING */
     text-align: center;
 }
 #page3 {
     position: absolute;
-    width: 100%;
+    width: 70%;
     visibility: hidden;
 
+    /* TESTING */
     text-align: center;
 }
 
